	  Evan Schoenberg)
	* Fixed the MSN signon crash with Miranda users in the buddy list
	* Fixed sending messages to MSN Web Messenger users (Damien Ayers)
	* Fixed some memory leaks in the MSN plugin (Evan Schoenberg)
	* Fixed a crash viewing certain MSN user profiles (Evan Schoenberg)
	* Fixed a crash sending a file on MSN when the file is unreadable
        * Fixed a bug in Yahoo privacy handling (bleeter)

version 1.0.1 (10/07/2004):
	New Features:
	* Use the GNOME default browser when opening links if you're running GNOME
	  (Alex Duggan)
	* Added support for multiple addressbooks in the gevolution plugin
	  (Henry Jen).

	Bug Fixes:
	* Send-As menu duplicates less work (Dave West)
	* Can now see your own MSN buddy icon (Felipe Contreras)
	* Jabber roomlist fetches work again
	* Close buttons on tabs in existing conversations correctly reflect the
	  "show close buttons on tabs" preference (Nathan Fredrickson)
	* Fix to make the get_signon(buddy) perl plugin function work (Gregory C.
	  Harfst)
	* Fixed crashes when reloading the gevolution plugin (Henry Jen)
	* Fixed some memory leaks in the gevolution plugin.
	* Wrap at character boundaries if there is not enough space for a full word
	* 64 bit compile warning fixes

version 1.0.0 (09/17/2004):
	New Features:
	* Drag-and-drop buddy support for the Invite dialog (Stu Tomlinson)
	* Drag-and-drop buddy support for the Pounce dialog (Stu Tomlinson)
	* View Chat log available from the interface (Daniel Atallah)
	* Ability to receive offline messages in character encodings
	  other than ASCII (thanks to Nick Sukharev)
	* File transfer status messages printed to conversation
	  windows (Dave West)
	* Display file transfer messages when someone sends you a file
	  over AIM (Dave West)
	* Handle MSN buddy lists more sanely (Felipe Contreras)
	* Zephyr can use tzc to run from behind a firewall (Arun A Tharuvai)

	Bug Fixes:
	* Work around window manager stupidity with new dialog windows (Dave West)