@@ -67,6 +67,7 @@ Ryan C. Gordon
 Christian Hammond
 Benjamin Herrenschmidt
 Andy Harrison
+Andrew (arhart) Hart
 G. Sumner Hayes
 Mike Heffner
 Casey Ho
